<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingStart="?attr/dialogPreferredPadding"
    android:paddingEnd="?attr/dialogPreferredPadding"
    android:paddingBottom="?attr/dialogPreferredPadding">

    <TextView
        android:id="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="viewEnd"
        android:textColor="@color/colorPrimary"
        tools:text="1.0.0" />

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/about_empty"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:color="@color/colorPrimary"
        android:text="@string/about_copyright" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_copyright" />

    <TextView
        android:layout_marginTop="8dp"
        android:autoLink="web"
        android:id="@+id/about_weblink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_weblink" />

    <TextView
        android:layout_marginTop="8dp"
        android:autoLink="email"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_email" />

    <TextView
        android:id="@+id/about_credits"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_credits_first" />
    <TextView
        android:id="@+id/about_credits_second"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_credits_second" />

    <TextView
        android:id="@+id/about_credits_third"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_credits_third" />

    <TextView
        android:id="@+id/about_credits_fourth"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_credits_fourth" />



</LinearLayout>